# defiquant-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.codex/: AGENTS.md  ALPHA_LOOP.md  LOOP.md  config.toml
configs/: alpha_modes.json  bnb_agent_identity.json  cmc_agent_context.json  live_operations.json  risk_tuning.json  strategy.aggressive.json  strategy.balanced.json  strategy.defensive.json  strategy.frontier-lowdrawdown.json  strategy.frontier-return.json  strategy.frontier-risk.json  strategy.json  strategy.leveraged-volume-impulse.json  strategy.tournament.json  token_addresses.bsc.json  token_addresses.bsc.tournament.json
configs/mcp/: cmc-mcp.json  cmc-x402.json  twak.json
docs/: agent_integrations.md  alpha_competition_loop.md  bnb_agent_identity.md  cmc_agent_context.md  github_workflow.md  prefunding_readiness.md  submission_checklist.md  track1_live_operations.md  track1_registration.md
scripts/: backtest_leveraged_volume_impulse.py  check.ps1  simulate_leveraged_volume_impulse.py
skills/cmc-defiquant/: README.md  SKILL.md  SUBMISSION.md  skill.json
src/defiquant/: agent_endpoint.py  agent_profile.py  alpha.py  alpha_evidence.py  alpha_lab.py  bnb_agent.py  cli.py  cmc_agent_context.py  config.py  env.py  indicators.py  latest_evidence.py  leveraged_volume_impulse.py  models.py  research.py  risk.py  server.py  strategy.py  submission_evidence.py  track1_exposure.py  track2_delta_neutral.py  track2_regime.py  (+1 more)
tests/: test_agent_endpoint.py  test_agent_profile.py  test_alpha.py  test_alpha_evidence.py  test_alpha_lab.py  test_bnb_agent.py  test_cli.py  test_cmc.py  test_cmc_agent_context.py  test_cmc_skill_package.py  test_execution.py  test_indicators.py  test_latest_evidence.py  test_leveraged_volume_impulse.py  test_research.py  test_strategy.py  test_submission_evidence.py  test_tournament_lane.py  test_track1_exposure.py  test_track1_volume_impulse_lab.py  test_track2_delta_neutral.py  test_track2_regime.py  test_track2_skill_package.py  test_tuning.py  test_twak_portfolio.py
track1_volume_impulse_lab/: README.md  __init__.py  cmc_dex.py  config.example.json  optimize.py  strategy.py
(+9 files in other folders)
